--- a/app/sass/_main.scss
+++ b/app/sass/_main.scss
@@ -5,7 +5,7 @@
 }
 
 html, body {
-  overflow: hidden;
+  // overflow: hidden;
 }
 
 li {
@@ -26,6 +26,16 @@ header {
   height: 70px;
   font-family: 'PT Sans', sans-serif;
   z-index: 100;
+  color: $grayColor;
+  transition: color 500ms, background-color 500ms;
+
+  &.attached {
+    background: #fff;
+    color: #cfcfcf;
+    transition: transform 500ms;
+    transform: translateY(0) !important;
+    position: fixed;
+  }
 
   .container {
     display: flex;
@@ -43,7 +53,7 @@ header {
           padding: 22px;
           height: 100%;
           text-decoration: none;
-          color: $grayColor;
+          color: currentColor;
           font-size: 18px;
           letter-spacing: 1.5px;
           text-transform: uppercase;
@@ -112,6 +122,15 @@ header {
   position: relative;
   padding: 80px 0 120px;
   background-color: #fff;
+  overflow: hidden;
+
+  &__overlay {
+    background: linear-gradient(to bottom, transparent, #000);
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 100vh;
+  }
 
   &.forest {
     background: url('./img/home_bg.jpg') center / cover fixed no-repeat;
