--- a/app/sass/_main.scss
+++ b/app/sass/_main.scss
@@ -4,10 +4,6 @@
   box-sizing: border-box;
 }
 
-html, body {
-  // overflow: hidden;
-}
-
 li {
   list-style: none;
 }
@@ -49,6 +45,10 @@ header {
     justify-content: center;
     border-bottom: 1px solid #e2e4e5;
 
+    .toggleMenu {
+      display: none;
+    }
+
     .mainMenu {
       display: flex;
 
@@ -68,15 +68,6 @@ header {
           &:hover, &.active {
             background-color: #fff;
             color: #666;
-          }
-        }
-      }
-
-      &:hover {
-        li {
-          a:not(:hover) { 
-            background: none !important;
-            color: currentColor !important;
           }
         }
       }
@@ -133,11 +124,15 @@ header {
 }
 
 .fullScreen {
+  display: flex;
+  align-items: center;
   min-height: 100vh;
   position: relative;
   padding: 80px 0 120px;
   background-color: #fff;
   overflow: hidden;
+  font-family: 'Open Sans';
+  color: #202020;
 
   &__overlay {
     background: linear-gradient(to bottom, transparent, #000);
@@ -145,6 +140,54 @@ header {
     bottom: 0;
     width: 100%;
     height: 100vh;
+  }
+
+  figure {
+    display: flex;
+    width: 95%;
+
+    .img-wrapper {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex: 1;
+
+      img {
+        height: 65vh;
+        width: 100%;
+        object-fit: cover;
+        object-position: top center;
+      }
+    }
+
+    figcaption {
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      padding: 0 35px;
+      flex-basis: 50%;
+
+      h2 {
+        margin-bottom: 35px;
+        text-transform: uppercase;
+        font-size: 43px;
+        font-weight: normal;
+        letter-spacing: 1.8px;
+      }
+
+      blockquote {
+        line-height: 2;
+
+        p {
+          margin-bottom: 20px;
+        }
+
+        cite {
+          font-size: 25px;
+          font-style: normal;
+        }
+      }
+    }
   }
 
   &.forest {
@@ -155,52 +198,16 @@ header {
     display: flex;
     align-items: center;
     justify-content: center;
-    font-family: 'Open Sans';
-    color: #202020;
+  }
+}
 
-    figure {
-      display: flex;
-      width: 95%;
-
-      .img-wrapper {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        flex: 1;
-
-        img {
-          height: 65vh;
-          width: 100%;
-          object-fit: cover;
-          object-position: top center;
-        }
-      }
-
-      figcaption {
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        padding: 0 35px;
-        flex-basis: 50%;
-
-        h2 {
-          text-transform: uppercase;
-          font-size: 43px;
-          font-weight: normal;
-          letter-spacing: 1.8px;
-        }
-
-        blockquote {
-          line-height: 2;
-
-          p {
-            margin: 20px 0;
-          }
-
-          cite {
-            font-size: 25px;
-            font-style: normal;
-          }
+@media (min-width: 601px) {
+  .mainMenu {
+    &:hover {
+      li {
+        a:not(:hover) {
+          background: none !important;
+          color: currentColor !important;
         }
       }
     }
